Copy of template implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,7 @@ set(LIBRARY_DEPS ${OpenCV_LIBS})
 
 # BUILD
 add_subdirectory(sample_template)
-# Add you directory here
-# add_subdirectory(sample_YOUR_NAME)
+add_subdirectory(sample_kustikova)
 
 # REPORT
 message( STATUS "")
